--- a/MyExpenseTracker/MyExpenseTracker/AddExpensePage.xaml
+++ b/MyExpenseTracker/MyExpenseTracker/AddExpensePage.xaml
@@ -22,15 +22,15 @@
 
                     <ViewCell>
                         <StackLayout Orientation="Horizontal">
-                            <Button Text="prev" Clicked="PrevButtonClicked" HorizontalOptions="StartAndExpand"></Button>
-                            <Label x:Name="datelabel"  HorizontalOptions="Center" TextColor="Black"/>
-                            <Button Text="next" Clicked="NextButtonClicked" HorizontalOptions="EndAndExpand"></Button>
+                            <Button Text="prev" Clicked="PrevButtonClicked" HorizontalOptions="StartAndExpand" FontAttributes="Bold"></Button>
+                            <Label x:Name="datelabel"  HorizontalOptions="Center" TextColor="Black" FontAttributes="Bold"/>
+                            <Button Text="next" Clicked="NextButtonClicked" HorizontalOptions="EndAndExpand" FontAttributes="Bold"></Button>
                         </StackLayout>
                     </ViewCell>
                     <TextCell Text="Choose Expense Category" TextColor="Black"></TextCell>
                     <ViewCell Tapped="Category_Clicked">
                         <StackLayout Orientation="Horizontal">
-                            <Label x:Name="Category_Name" Text="Food" FontSize="20"  HeightRequest="30" WidthRequest="200" Margin="20,0,0,0" ></Label>
+                            <Label x:Name="Category_Name" Text="Food" FontSize="20"  HeightRequest="30" WidthRequest="200" Margin="20,0,0,0" FontFamily="Roboto-Regular"  FontAttributes="Bold"  ></Label>
                             <ImageButton x:Name="Category_Image" Source="Food.png" Clicked="Category_Clicked"  />
                         </StackLayout>
                     </ViewCell>
